# sglang

./: AGENTS.md  CONTRIBUTING.md  pyproject.toml  setup.py
.buildkite/: pipeline.yml
.buildkite/k3_harness/: ci-base.Dockerfile  setup-blend-env.sh  setup-env.sh  setup-sglang-env.sh
.buildkite/k3_tests/: README.md
.github/: CODEOWNERS
.github/scripts/: macos_smoke_test.sh
.github/workflows/: actionlint.yml  build_cli_artifacts.yml  build_cu129_artifacts.yml  build_doc.yml  build_main_artifacts.yml  code_quality_checks.yml  codeql.yml  macos_compat.yml  nightly_build.yml  publish.yml  scorecard.yml  stale_bot.yml  test.yml
csrc/: event_recorder.cpp  mem_kernels.cu  mem_kernels.cuh  mp_mem_kernels.cu  mp_mem_kernels.cuh  pybind.cpp
csrc/storage_backends/: README.md  connector_base.h  event_notifier.h
csrc/sycl/: ac_dec_sycl.cpp  ac_enc_sycl.cpp  cachegen_kernels_sycl.h  cal_cdf_sycl.cpp  mem_kernels_sycl.cpp  mem_kernels_sycl.h  pos_kernels_sycl.cpp  pybind_sycl.cpp
docker/: Dockerfile  Dockerfile.standalone  README.md
docs/design/: ARCHITECTURE_MULTI_HARDWARE.md
examples/: README.md
examples/disagg_prefill/: disagg_proxy_server.py
examples/lmc_external_native_connector/: pyproject.toml  setup.py
examples/lmc_external_native_connector/csrc/: connector.cpp  connector.h  pybind.cpp
examples/lmc_external_native_connector/src/lmc_external_native_connector/: __init__.py  connector.py
lmcache/: __init__.py  python_ops_fallback.py  utils.py
operator/: DESIGN.md  README.md
requirements/: common.txt
tests/: conftest.py  test_serde.py
(+443 files in other folders)
